--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@
 # name in other parts of the configuration and in your code.
 peers:
 
-  Org1:
+  peer0.org1:
     # An optional peer name to be used in logging, defaults to the key if not
     # provided
     name: 'peer0.org1.example.com'
@@ -22,35 +22,7 @@ peers:
 
     # Optional SSL target name for this peer (if different than the endpoint
     # host)
-    ssl_target_name: peer.mydomain.com
-
-    # Defines either a path to the tls ca cert file, or the actual cert file
-    # contents
-    tls_ca_cert_path: /path/to/tlsca/cert/file/for/peer
-    tls_ca_cert: '<cert contents>'
-
-    # Defines either a path to the client auth cert file, or the actual cert
-    # file contents
-    client_cert_path: /path/to/client/cert/file/for/peer
-    client_cert: '<cert contents>'
-
-    # Defines either a path to the client auth key file, or the actual key file
-    # contents
-    client_key_path: /path/to/client/key/file/for/peer
-    client_key: '<key contents>'
-
-
-    Org2:
-    # An optional peer name to be used in logging, defaults to the key if not
-    # provided
-    name: 'peer1.org1.example.com'
-
-    # endpoint: host and port for connecting to the peer instance
-    endpoint: peer1.org1.example.com:8051
-
-    # Optional SSL target name for this peer (if different than the endpoint
-    # host)
-    ssl_target_name: peer.mydomain.com
+    #ssl_target_name: peer.mydomain.com
 
     # Defines either a path to the tls ca cert file, or the actual cert file
     # contents
@@ -103,83 +75,27 @@ orderers:
     client_key_path: /path/to/client/key/file/for/orderer
     client_key: '<key contents>'
 
-
-    orderer2:
-    # An optional orderer name to be used in logging, defaults to the key if not
-    # provided
-    name: 'orderer2'
-
-    # endpoint: host and port for connecting to the orderer instance
-    endpoint: orderer2.example.com:8050
-
-    # Optional SSL target name for this orderer (if different than the
-    # endpoint host)
-    ssl_target_name: orderer.mydomain.com
-
-    # Defines either a path to the tls ca cert file, or the actual cert file
-    # contents
-    tls_ca_cert_path: /path/to/tlsca/cert/file/for/orderer
-    tls_ca_cert: '<cert contents>'
-
-    # Defines either a path to the client auth cert file, or the actual cert
-    # file contents
-    client_cert_path: /path/to/client/cert/file/for/orderer
-    client_cert: '<cert contents>'
-
-    # Defines either a path to the client auth key file, or the actual key file
-    # contents
-    client_key_path: /path/to/client/key/file/for/orderer
-    client_key: '<key contents>'
-
-
-  orderer5:
-    # An optional orderer name to be used in logging, defaults to the key if not
-    # provided
-    name: 'orderer5'
-
-    # endpoint: host and port for connecting to the orderer instance
-    endpoint: orderer5.example.com:11050
-
-    # Optional SSL target name for this orderer (if different than the
-    # endpoint host)
-    ssl_target_name: orderer.mydomain.com
-
-    # Defines either a path to the tls ca cert file, or the actual cert file
-    # contents
-    tls_ca_cert_path: /path/to/tlsca/cert/file/for/orderer
-    tls_ca_cert: '<cert contents>'
-
-    # Defines either a path to the client auth cert file, or the actual cert
-    # file contents
-    client_cert_path: /path/to/client/cert/file/for/orderer
-    client_cert: '<cert contents>'
-
-    # Defines either a path to the client auth key file, or the actual key file
-    # contents
-    client_key_path: /path/to/client/key/file/for/orderer
-    client_key: '<key contents>'
-
 # -----------------------------------------------------------------------------
 # USERS
 #
 # In this section, define credentials for users that will be signing requests
 users:
-  my-user-name:
+  User1:
     # An optional user name to be used in logging, defaults to the key if not
     # provided
-    name: my-user-name
+    name: User1
     # The MSP ID for this user's organization
     msp_id: MyOrgMSP
 
     # Defines either a path to the cert file for this user, or the actual cert
     # file contents
-    cert_path: /path/to/cert/file/for/user
-    cert: <cert contents>
+    cert_path: ../caliper-workspace/peerOrganizations/org1.example.com/users/User1@org1.example.com/msp/keystore/priv_sk
+    #cert: <cert contents>
 
     # Defines either a path to the key file for this user, or the actual key
     # file contents
-    key_path: /path/to/key/file/for/user
-    key: <key contents>
+    key_path: ../caliper-workspace/peerOrganizations/org1.example.com/users/User1@org1.example.com/msp/signcerts/User1@org1.example.com-cert.pem
+    #key: <key contents>
 
 # -----------------------------------------------------------------------------
 # CHAINCODES
@@ -190,11 +106,11 @@ chaincodes:
   fabcar:
     # Optional name (unique ID) for this chaincode that will be used in
     # installation/instantiation. If not provided, defaults to the config key
-    name: fabcar_1
+    name: fabcar
     # The path to the chaincode. The SDK with either look this file up in the
     # GOPATH or interpret it as a direct file path to the chaincode directory.
     # This is only needed to install chaincode on a peer
-    path: github.com/org/repo/path/to/chaincode
+    #path: github.com/org/repo/path/to/chaincode
     # The optional language of the chaincode (currently only GOLANG is
     # supported, which is the default)
     language: GOLANG
@@ -213,19 +129,16 @@ gateways:
     # A list of peers that should be used for endorsement, specified using keys
     # from the `peers` configuration above
     endorsing_peers:
-      - Org1
-      - Org2
+      - peer0.org1
     # A list of orderers that should be used for sending transactions,
     # specified using keys from the `orderers` configuration above. Note that
     # the orderers will be sent transactions one at a time in-order, until a
     # successful response is returned
     orderers:
       - orderer
-      - orderer2
-      - orderer5
     # A user that will be used to sign transactions, specified using a key from
     # the `users` configuration above
-    requestor: my-user-name
+    requestor: User1
     # A chaincode that will be used to sign transactions, specified using a key
     # from the `chaincodes` configuration above
     chaincode: fabcar
