--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "Ericksulino Moura",
     "license": "ISC",
     "dependencies": {
+        "crypto": "^1.0.1",
         "fabric-ca-client": "^2.2.17",
         "fabric-network": "^2.2.17"
     }
