--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "crypto": "^1.0.1",
         "fabric-ca-client": "^2.2.17",
+        "fabric-gateway": "^0.1.0-dev.20211029.6",
         "fabric-network": "^2.2.17"
     }
 }
